--- a/sh-client/package.json
+++ b/sh-client/package.json
@@ -3,9 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "@types/googlemaps": "3.30.12",
+    "@types/markerclustererplus": "2.1.33",
+    "@types/react": "16.4.12",
+    "ajv": "5.0.0",
+    "bootstrap": "4.1.3",
+    "chart.js": "2.7.1",
+    "history": "4.7.2",
+    "jquery": "3.3.1",
+    "node-sass": "4.9.3",
+    "node-sass-chokidar": "1.3.3",
+    "npm-run-all": "4.1.3",
+    "perfect-scrollbar": "1.4.0",
+    "react": "16.4.2",
+    "react-chartjs-2": "2.7.4",
+    "react-dom": "16.4.2",
+    "react-google-maps": "9.4.5",
+    "react-notification-alert": "0.0.8",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "1.1.5",
+    "reactstrap": "6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
