--- a/sh-client/package.json
+++ b/sh-client/package.json
@@ -8,7 +8,7 @@
     "@types/react": "16.4.12",
     "ajv": "5.0.0",
     "bootstrap": "4.1.3",
-    "chart.js": "2.7.1",
+    "chart.js": "^2.7.3",
     "history": "4.7.2",
     "jquery": "3.3.1",
     "node-sass": "4.9.3",
@@ -19,6 +19,10 @@
     "react-chartjs-2": "2.7.4",
     "react-dom": "16.4.2",
     "react-google-maps": "9.4.5",
+    "react-native-cli": "^2.0.1",
+    "react-native-gesture-handler": "^1.0.12",
+    "react-native-navigation": "^2.6.0",
+    "react-navigation": "^3.0.9",
     "react-notification-alert": "0.0.8",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
