--- a/sh-client/package.json
+++ b/sh-client/package.json
@@ -9,6 +9,7 @@
     "ajv": "5.0.0",
     "bootstrap": "4.1.3",
     "chart.js": "^2.7.3",
+    "firebase": "^5.7.3",
     "history": "4.7.2",
     "jquery": "3.3.1",
     "node-sass": "4.9.3",
