--- a/sh-client/package.json
+++ b/sh-client/package.json
@@ -12,6 +12,7 @@
     "firebase": "^5.7.3",
     "history": "4.7.2",
     "jquery": "3.3.1",
+    "lodash": "^4.17.11",
     "node-sass": "4.9.3",
     "node-sass-chokidar": "1.3.3",
     "npm-run-all": "4.1.3",
